# GOLD_HFT

./: .gitignore  AMELIORATIONS_MT5.md  AMELIORATIONS_V2.md  ARCHITECTURE_MODULAIRE.md  CIRCUIT_BREAKER_ACTIVABLE.md  CIRCUIT_BREAKER_CONFIG.md  CIRCUIT_BREAKER_INTERFACE_INTERACTIVE.md  CORRECTIONS_GUI_TEMPS_REEL.md  CORRECTION_FEED_TICKS.md  CORRECTION_FILLING_MODE.md  CORRECTION_ORDRES_NON_PLACES.md  CORRECTION_TP_SL_SPREAD.md  DIAGNOSTIC_AVANCE.md  DIAGNOSTIC_BOUCLE_STRATEGIE.md  DIAGNOSTIC_COMPARATIF_ANCIEN_VS_NOUVEAU.md  DIAGNOSTIC_NO_ORDERS.md  DIAGNOSTIC_SEUILS_MEMOIRE.md  README.md  README.md.backup  build_rust.py  pip_utils.py  requirements.txt  run_hft_bot.py  run_sleeper_once.py  run_sleeper_pair_tf.py  signal_utils.py  start_bot.bat  start_bot.ps1  time_features.py
analytics/: elliott_detector.py  market_observer.py  ml_agent.py
config/: preset_manager.py  settings_manager.py  trading_config.py  user_settings.json
data/: __init__.py  ml_state.npz  tick_buffer.py  tick_feed.py
gui/: __init__.py  indicator_worker.py  main_window.py
hft_rust_core/: Cargo.toml
hft_rust_core/src/: indicators.rs  lib.rs  signal_detector.rs  tick_processor.rs
indicators/: hft_indicators.py  zigzag.py
ml/: __init__.py  feature_extractor.py  ml_training_wizard.py  run_training.py  trade_database.py  trainer.py
ml/data/: README.md
models/: __init__.py  data_models.py  ohlc.py  tick.py
trading/: __init__.py  position_manager.py  risk_manager.py  strategy.py  sweep_manager.py
utils/: __init__.py  logger.py  mt5_helper.py
venv_balance/: pyvenv.cfg
(+6 files in other folders)
